<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Receipt Alert</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_receipt_btn">New Receipt</string>
    <string name="setup_btn">Banks</string>
    <string name="report_btn">Report</string>
    <string name="title_activity_new_bank">NewBankActivity</string>

    <!-- Bank Activity -->
    <string name="my_banks_textview">Banks</string>
    <string name="add_new_bank_btn">Add new bank</string>

    <!-- New Bank Activity -->
    <string name="bank_name_textview">Bank Name</string>
    <string name="cycle_date_textview">Cycle Date</string>
    <string name="title_activity_bank">BankActivity</string>
    <string name="complete_btn">Complete</string>
    <string name="title_activity_new_receipt">NewReceiptActivity</string>

    <!-- New Receipt Activity -->
    <string name="receipt_label">Receipt Label</string>
    <string name="receipt_date">Transaction Date</string>
    <string name="receipt_bank">Bank</string>
    <string name="receipt_payment">Payment</string>
    <string name="save_receipt_btn">Save</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_bank_receipt">BankReceiptActivity</string>

</resources>
